# pybind11-protobuf-bazel-example

./: .bazelrc  README.md  WORKSPACE.bazel  setup.py
my_package/: BUILD.bazel  __init__.py  example.py
my_package/proto/: BUILD.bazel  example.proto
my_package/pybind11/: BUILD.bazel  my_extension.cc
my_package/python/: BUILD.bazel  __init__.py  my_extension.cc
