package(default_visibility = ["//visibility:public"])

py_binary(
    name = "example",
    srcs = ["example.py"],
    python_version = "PY3",
    deps = [
        "//my_package/proto:example_py_pb2",
    ],
    data = [
        "//my_package/pybind11:my_extension.so",
        "@com_google_protobuf//:protobuf_python",
        # "@com_google_protobuf//:proto_api", # TODO - Is this required?
    ]
)