load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//python:defs.bzl", "python_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "example_proto",
    srcs = ["example.proto"],
)

python_proto_library(
    name = "example_python_proto",
    deps = [":example_proto"],
)

# See: https://docs.bazel.build/versions/main/be/c-cpp.html#cc_proto_library
cc_proto_library(
    name = "example_cc_proto",
    deps = [":example_proto"],
)