load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

package(default_visibility = ["//my_package:__subpackages__"])


pybind_extension(
    name = "my_extension",
    srcs = ["my_extension.cc"],
    deps = [
        "//my_package/proto:example_cc_proto",
        "@com_google_protobuf//:protobuf",
        "@pybind11_protobuf//pybind11_protobuf:native_proto_caster",
    ],
)
